<resources>
    <string name="app_name">ExamenFragments_AlbertoRodriguez</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insertar">Insertar</string>
    <string name="inserta_t_tulo">Inserta título</string>
    <string name="inserta_n_de_p_ginas">Inserta nº de páginas</string>
    <string name="inserta_el_autor">Inserta el autor</string>
    <string name="a_adir">Añadir</string>
    <string name="rellena_los_campos_correctamnete">Rellena los campos correctamnete</string>
    <string name="a_adir_un_libro">Añadir un libro</string>
    <string name="cancelar">Cancelar</string>
    <string name="nsertar">Insertar</string>
</resources>